# BUILD_MY_AGENT

./: .gitignore
MCP/servers/ABACUS-tools/tests/abacus/: INPUT_ref
MCP/servers/ABACUS-tools/tests/abacus/Si-sp/: INPUT
MCP/servers/Github_Search/: README.md  USAGE_EXAMPLES.md  mcp-config.json  metadata.json  pyproject.toml  server.py  start_server.py  test_server.py
MCP/servers/Github_Search/repositories/python_web_framework/: repositories_info.json
MCP/servers/Github_Search/repositories/springboot_and_vue/: repositories_info.json
agents/Github_Search_UI/: DUAL_MODEL_README.md  README.md  README_ReAct.md  agent.py  complexity_examples.py  config_example.env  test_dual_model.py  test_react_agent.py
agents/paper_search_demo/: agent.py
