[project]
name = "github-search"
version = "0.1.0"
description = "GitHub Repository Search and Analysis Service"
requires-python = ">=3.10"

dependencies = [
    "requests>=2.28.0",
    "fastapi",
    "uvicorn",
    "fastmcp"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."] 